--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-db/
-temp/
-dist/
+/db/
+/temp/
+/dist/
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -164,7 +164,6 @@ web_modules/
 
 # Next.js build output
 .next
-out
 
 # Nuxt.js build / generate output
 .nuxt
