--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /db/
 /temp/
 /dist/
+/env.yml
 
 ### JetBrains template
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
