--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "js-yaml": "^4.1.0",
     "pdf-page-counter": "^1.0.3",
     "rimraf": "^3.0.2",
-    "uuid": "^9.0.0",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.5",
